added workspace ednndpoints
