# internal/model/workspace_easyjson.go
@@ -1,0 +1,410 @@
+// Code generated by easyjson for marshaling/unmarshaling. DO NOT EDIT.
+
+package model
+
+import (
+	json "encoding/json"
+	easyjson "github.com/mailru/easyjson"
+	jlexer "github.com/mailru/easyjson/jlexer"
+	jwriter "github.com/mailru/easyjson/jwriter"
+)
+
+// suppress unused package warning
+var (
+	_ *json.RawMessage
+	_ *jlexer.Lexer
+	_ *jwriter.Writer
+	_ easyjson.Marshaler
+)
+
+func easyjson66c9e915DecodeGithubComDnonakolesaxCccadLocksInternalModel(in *jlexer.Lexer, out *WorkspaceList) {
+	isTopLevel := in.IsStart()
+	if in.IsNull() {
+		if isTopLevel {
+			in.Consumed()
+		}
+		in.Skip()
+		return
+	}
+	in.Delim('{')
+	for !in.IsDelim('}') {
+		key := in.UnsafeFieldName(false)
+		in.WantColon()
+		switch key {
+		case "workspaces":
+			if in.IsNull() {
+				in.Skip()
+				out.Workspaces = nil
+			} else {
+				in.Delim('[')
+				if out.Workspaces == nil {
+					if !in.IsDelim(']') {
+						out.Workspaces = make([]Workspace, 0, 0)
+					} else {
+						out.Workspaces = []Workspace{}
+					}
+				} else {
+					out.Workspaces = (out.Workspaces)[:0]
+				}
+				for !in.IsDelim(']') {
+					var v1 Workspace
+					if in.IsNull() {
+						in.Skip()
+					} else {
+						(v1).UnmarshalEasyJSON(in)
+					}
+					out.Workspaces = append(out.Workspaces, v1)
+					in.WantComma()
+				}
+				in.Delim(']')
+			}
+		default:
+			in.SkipRecursive()
+		}
+		in.WantComma()
+	}
+	in.Delim('}')
+	if isTopLevel {
+		in.Consumed()
+	}
+}
+func easyjson66c9e915EncodeGithubComDnonakolesaxCccadLocksInternalModel(out *jwriter.Writer, in WorkspaceList) {
+	out.RawByte('{')
+	first := true
+	_ = first
+	{
+		const prefix string = ",\"workspaces\":"
+		out.RawString(prefix[1:])
+		if in.Workspaces == nil && (out.Flags&jwriter.NilSliceAsEmpty) == 0 {
+			out.RawString("null")
+		} else {
+			out.RawByte('[')
+			for v2, v3 := range in.Workspaces {
+				if v2 > 0 {
+					out.RawByte(',')
+				}
+				(v3).MarshalEasyJSON(out)
+			}
+			out.RawByte(']')
+		}
+	}
+	out.RawByte('}')
+}
+
+// MarshalJSON supports json.Marshaler interface
+func (v WorkspaceList) MarshalJSON() ([]byte, error) {
+	w := jwriter.Writer{}
+	easyjson66c9e915EncodeGithubComDnonakolesaxCccadLocksInternalModel(&w, v)
+	return w.Buffer.BuildBytes(), w.Error
+}
+
+// MarshalEasyJSON supports easyjson.Marshaler interface
+func (v WorkspaceList) MarshalEasyJSON(w *jwriter.Writer) {
+	easyjson66c9e915EncodeGithubComDnonakolesaxCccadLocksInternalModel(w, v)
+}
+
+// UnmarshalJSON supports json.Unmarshaler interface
+func (v *WorkspaceList) UnmarshalJSON(data []byte) error {
+	r := jlexer.Lexer{Data: data}
+	easyjson66c9e915DecodeGithubComDnonakolesaxCccadLocksInternalModel(&r, v)
+	return r.Error()
+}
+
+// UnmarshalEasyJSON supports easyjson.Unmarshaler interface
+func (v *WorkspaceList) UnmarshalEasyJSON(l *jlexer.Lexer) {
+	easyjson66c9e915DecodeGithubComDnonakolesaxCccadLocksInternalModel(l, v)
+}
+func easyjson66c9e915DecodeGithubComDnonakolesaxCccadLocksInternalModel1(in *jlexer.Lexer, out *Workspace) {
+	isTopLevel := in.IsStart()
+	if in.IsNull() {
+		if isTopLevel {
+			in.Consumed()
+		}
+		in.Skip()
+		return
+	}
+	in.Delim('{')
+	for !in.IsDelim('}') {
+		key := in.UnsafeFieldName(false)
+		in.WantColon()
+		switch key {
+		case "id":
+			if in.IsNull() {
+				in.Skip()
+			} else {
+				out.ID = string(in.String())
+			}
+		case "name":
+			if in.IsNull() {
+				in.Skip()
+			} else {
+				out.Name = string(in.String())
+			}
+		case "description":
+			if in.IsNull() {
+				in.Skip()
+			} else {
+				out.Description = string(in.String())
+			}
+		case "createdByUserId":
+			if in.IsNull() {
+				in.Skip()
+			} else {
+				out.CreatedByUserID = string(in.String())
+			}
+		case "createdAt":
+			if in.IsNull() {
+				in.Skip()
+			} else {
+				out.CreatedAt = string(in.String())
+			}
+		case "updatedAt":
+			if in.IsNull() {
+				in.Skip()
+			} else {
+				out.UpdatedAt = string(in.String())
+			}
+		default:
+			in.SkipRecursive()
+		}
+		in.WantComma()
+	}
+	in.Delim('}')
+	if isTopLevel {
+		in.Consumed()
+	}
+}
+func easyjson66c9e915EncodeGithubComDnonakolesaxCccadLocksInternalModel1(out *jwriter.Writer, in Workspace) {
+	out.RawByte('{')
+	first := true
+	_ = first
+	{
+		const prefix string = ",\"id\":"
+		out.RawString(prefix[1:])
+		out.String(string(in.ID))
+	}
+	{
+		const prefix string = ",\"name\":"
+		out.RawString(prefix)
+		out.String(string(in.Name))
+	}
+	if in.Description != "" {
+		const prefix string = ",\"description\":"
+		out.RawString(prefix)
+		out.String(string(in.Description))
+	}
+	{
+		const prefix string = ",\"createdByUserId\":"
+		out.RawString(prefix)
+		out.String(string(in.CreatedByUserID))
+	}
+	{
+		const prefix string = ",\"createdAt\":"
+		out.RawString(prefix)
+		out.String(string(in.CreatedAt))
+	}
+	{
+		const prefix string = ",\"updatedAt\":"
+		out.RawString(prefix)
+		out.String(string(in.UpdatedAt))
+	}
+	out.RawByte('}')
+}
+
+// MarshalJSON supports json.Marshaler interface
+func (v Workspace) MarshalJSON() ([]byte, error) {
+	w := jwriter.Writer{}
+	easyjson66c9e915EncodeGithubComDnonakolesaxCccadLocksInternalModel1(&w, v)
+	return w.Buffer.BuildBytes(), w.Error
+}
+
+// MarshalEasyJSON supports easyjson.Marshaler interface
+func (v Workspace) MarshalEasyJSON(w *jwriter.Writer) {
+	easyjson66c9e915EncodeGithubComDnonakolesaxCccadLocksInternalModel1(w, v)
+}
+
+// UnmarshalJSON supports json.Unmarshaler interface
+func (v *Workspace) UnmarshalJSON(data []byte) error {
+	r := jlexer.Lexer{Data: data}
+	easyjson66c9e915DecodeGithubComDnonakolesaxCccadLocksInternalModel1(&r, v)
+	return r.Error()
+}
+
+// UnmarshalEasyJSON supports easyjson.Unmarshaler interface
+func (v *Workspace) UnmarshalEasyJSON(l *jlexer.Lexer) {
+	easyjson66c9e915DecodeGithubComDnonakolesaxCccadLocksInternalModel1(l, v)
+}
+func easyjson66c9e915DecodeGithubComDnonakolesaxCccadLocksInternalModel2(in *jlexer.Lexer, out *UpdateWorkspaceRequest) {
+	isTopLevel := in.IsStart()
+	if in.IsNull() {
+		if isTopLevel {
+			in.Consumed()
+		}
+		in.Skip()
+		return
+	}
+	in.Delim('{')
+	for !in.IsDelim('}') {
+		key := in.UnsafeFieldName(false)
+		in.WantColon()
+		switch key {
+		case "name":
+			if in.IsNull() {
+				in.Skip()
+				out.Name = nil
+			} else {
+				if out.Name == nil {
+					out.Name = new(string)
+				}
+				if in.IsNull() {
+					in.Skip()
+				} else {
+					*out.Name = string(in.String())
+				}
+			}
+		case "description":
+			if in.IsNull() {
+				in.Skip()
+				out.Description = nil
+			} else {
+				if out.Description == nil {
+					out.Description = new(string)
+				}
+				if in.IsNull() {
+					in.Skip()
+				} else {
+					*out.Description = string(in.String())
+				}
+			}
+		default:
+			in.SkipRecursive()
+		}
+		in.WantComma()
+	}
+	in.Delim('}')
+	if isTopLevel {
+		in.Consumed()
+	}
+}
+func easyjson66c9e915EncodeGithubComDnonakolesaxCccadLocksInternalModel2(out *jwriter.Writer, in UpdateWorkspaceRequest) {
+	out.RawByte('{')
+	first := true
+	_ = first
+	if in.Name != nil {
+		const prefix string = ",\"name\":"
+		first = false
+		out.RawString(prefix[1:])
+		out.String(string(*in.Name))
+	}
+	if in.Description != nil {
+		const prefix string = ",\"description\":"
+		if first {
+			first = false
+			out.RawString(prefix[1:])
+		} else {
+			out.RawString(prefix)
+		}
+		out.String(string(*in.Description))
+	}
+	out.RawByte('}')
+}
+
+// MarshalJSON supports json.Marshaler interface
+func (v UpdateWorkspaceRequest) MarshalJSON() ([]byte, error) {
+	w := jwriter.Writer{}
+	easyjson66c9e915EncodeGithubComDnonakolesaxCccadLocksInternalModel2(&w, v)
+	return w.Buffer.BuildBytes(), w.Error
+}
+
+// MarshalEasyJSON supports easyjson.Marshaler interface
+func (v UpdateWorkspaceRequest) MarshalEasyJSON(w *jwriter.Writer) {
+	easyjson66c9e915EncodeGithubComDnonakolesaxCccadLocksInternalModel2(w, v)
+}
+
+// UnmarshalJSON supports json.Unmarshaler interface
+func (v *UpdateWorkspaceRequest) UnmarshalJSON(data []byte) error {
+	r := jlexer.Lexer{Data: data}
+	easyjson66c9e915DecodeGithubComDnonakolesaxCccadLocksInternalModel2(&r, v)
+	return r.Error()
+}
+
+// UnmarshalEasyJSON supports easyjson.Unmarshaler interface
+func (v *UpdateWorkspaceRequest) UnmarshalEasyJSON(l *jlexer.Lexer) {
+	easyjson66c9e915DecodeGithubComDnonakolesaxCccadLocksInternalModel2(l, v)
+}
+func easyjson66c9e915DecodeGithubComDnonakolesaxCccadLocksInternalModel3(in *jlexer.Lexer, out *CreateWorkspaceRequest) {
+	isTopLevel := in.IsStart()
+	if in.IsNull() {
+		if isTopLevel {
+			in.Consumed()
+		}
+		in.Skip()
+		return
+	}
+	in.Delim('{')
+	for !in.IsDelim('}') {
+		key := in.UnsafeFieldName(false)
+		in.WantColon()
+		switch key {
+		case "name":
+			if in.IsNull() {
+				in.Skip()
+			} else {
+				out.Name = string(in.String())
+			}
+		case "description":
+			if in.IsNull() {
+				in.Skip()
+			} else {
+				out.Description = string(in.String())
+			}
+		default:
+			in.SkipRecursive()
+		}
+		in.WantComma()
+	}
+	in.Delim('}')
+	if isTopLevel {
+		in.Consumed()
+	}
+}
+func easyjson66c9e915EncodeGithubComDnonakolesaxCccadLocksInternalModel3(out *jwriter.Writer, in CreateWorkspaceRequest) {
+	out.RawByte('{')
+	first := true
+	_ = first
+	{
+		const prefix string = ",\"name\":"
+		out.RawString(prefix[1:])
+		out.String(string(in.Name))
+	}
+	if in.Description != "" {
+		const prefix string = ",\"description\":"
+		out.RawString(prefix)
+		out.String(string(in.Description))
+	}
+	out.RawByte('}')
+}
+
+// MarshalJSON supports json.Marshaler interface
+func (v CreateWorkspaceRequest) MarshalJSON() ([]byte, error) {
+	w := jwriter.Writer{}
+	easyjson66c9e915EncodeGithubComDnonakolesaxCccadLocksInternalModel3(&w, v)
+	return w.Buffer.BuildBytes(), w.Error
+}
+
+// MarshalEasyJSON supports easyjson.Marshaler interface
+func (v CreateWorkspaceRequest) MarshalEasyJSON(w *jwriter.Writer) {
+	easyjson66c9e915EncodeGithubComDnonakolesaxCccadLocksInternalModel3(w, v)
+}
+
+// UnmarshalJSON supports json.Unmarshaler interface
+func (v *CreateWorkspaceRequest) UnmarshalJSON(data []byte) error {
+	r := jlexer.Lexer{Data: data}
+	easyjson66c9e915DecodeGithubComDnonakolesaxCccadLocksInternalModel3(&r, v)
+	return r.Error()
+}
+
+// UnmarshalEasyJSON supports easyjson.Unmarshaler interface
+func (v *CreateWorkspaceRequest) UnmarshalEasyJSON(l *jlexer.Lexer) {
+	easyjson66c9e915DecodeGithubComDnonakolesaxCccadLocksInternalModel3(l, v)
+}
